[package]
name = "vokra-ops"
description = "Speech-specialized operators for the Vokra runtime (STFT/iSTFT, Mel, vocoder chains, ... — implemented from M0-04 onwards)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
vokra-core.workspace = true

# M0-04-T19: FFT / RFFT / STFT micro-benchmarks. `harness = false` uses a plain
# `fn main()` binary (std timing) instead of the unstable libtest `#[bench]`
# harness or an external bench crate (criterion is an external dependency and
# the workspace keeps zero third-party deps).
[[bench]]
name = "fft_bench"
harness = false

# M2-05-T11: streaming iSTFT vs batch istft micro-benchmarks. `harness = false`
# for the same zero-dependency reason as fft_bench (no criterion/libtest bench).
[[bench]]
name = "istft_streaming_bench"
harness = false

[lints]
workspace = true
