[package]
name = "vokra-ops"
description = "Speech-specialized operators for the Vokra runtime (STFT/iSTFT, Mel, vocoder chains, ... — implemented from M0-04 onwards)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
vokra-core.workspace = true

# M2-04-T07: log-mel fused-vs-unfused parity harness (see
# `tests/fused_logmel_parity.rs`). Workspace-internal only (no third-party
# crate), so the zero-dep invariant (NFR-DS-02) is preserved — the root
# `Cargo.lock` continues to list only `vokra-*` packages. This edge is a
# dev-only edge: it never enters the default build graph of `vokra-ops`, and
# `./scripts/check-zero-deps.sh` audits the release lock.
[dev-dependencies]
vokra-models = { path = "../vokra-models" }

# M0-04-T19: FFT / RFFT / STFT micro-benchmarks. `harness = false` uses a plain
# `fn main()` binary (std timing) instead of the unstable libtest `#[bench]`
# harness or an external bench crate (criterion is an external dependency and
# the workspace keeps zero third-party deps).
[[bench]]
name = "fft_bench"
harness = false

# M2-05-T11: streaming iSTFT vs batch istft micro-benchmarks. `harness = false`
# for the same zero-dependency reason as fft_bench (no criterion/libtest bench).
[[bench]]
name = "istft_streaming_bench"
harness = false

# M2-04-T11: fused-vs-unfused log-mel micro-benchmarks. `harness = false` for
# the same zero-dependency reason as fft_bench (no criterion/libtest bench).
# The imperative reference path lives in `vokra-models` (`whisper::mel::log_mel`
# under `VOKRA_DISABLE_FUSION=1`); the fused kernel is `fused_log_mel_scalar`
# in this crate.
[[bench]]
name = "fused_logmel_bench"
harness = false

# M4-03-T11: AEC per-frame timing + real-time budget ratio (RTF hook).
# `harness = false` for the same zero-dependency reason; no absolute perf
# gate (relative-regression thinking, M3-01).
[[bench]]
name = "aec_bench"
harness = false

[lints]
workspace = true
