[package]
name = "vokra-piper-plus"
description = "piper-plus G2P reuse bridge + voice-model conversion helpers (the MB-iSTFT-VITS2 inference core is natively implemented in vokra-models)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
vokra-core.workspace = true

[lints]
workspace = true
