# vokra-misaki-g2p — OUT-OF-WORKSPACE integration (opt-in developer tool).
#
# This crate is deliberately NOT a member of the Vokra root workspace. It shells
# out to the upstream Python `misaki` package (the G2P Kokoro-82M was trained
# with) — Python + misaki are third-party, so the runtime crates it wraps stay
# zero-dependency (NFR-DS-02).
#
# Own workspace root — the empty `[workspace]` table isolates this crate (and
# any transitive Rust deps its own additions may pull in later) from the Vokra
# root workspace, giving it a separate `Cargo.lock`.
#
# What it does: text --(subprocess: python misaki_bridge.py)--> phoneme string
# --(this crate: phoneme_symbols table lookup)--> phoneme ids --> Vokra's native
# Kokoro TTS (`KokoroTts::synthesize_phonemes`) --> WAV.
#
# The runtime crates it depends on (vokra-core / vokra-models) stay zero-dep;
# the third-party G2P is confined to this isolated crate and the Python
# subprocess it launches.

[package]
name = "vokra-misaki-g2p"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
publish = false
description = "Opt-in bridge: real misaki (Python) G2P driving Vokra's native Kokoro TTS (NOT part of the zero-dependency runtime)."

# Own workspace root — isolates this crate from Vokra root.
[workspace]

[[bin]]
name = "vokra-misaki-g2p"
path = "src/main.rs"

[lib]
name = "vokra_misaki_g2p"
path = "src/lib.rs"

[dependencies]
# First-party runtime crates, by path (these stay zero-dependency themselves).
vokra-core = { path = "../../crates/vokra-core" }
vokra-models = { path = "../../crates/vokra-models" }
