# vokra-piper-g2p — OUT-OF-WORKSPACE integration (opt-in developer tool).
#
# This crate is deliberately NOT a member of the Vokra root workspace. It links
# the real 8-language `piper-plus-g2p` (which pulls jpreprocess / regex / serde /
# … — all non-`vokra-*`), so it CANNOT live inside the zero-dependency runtime
# workspace (NFR-DS-02, enforced on the root `Cargo.lock`). The empty
# `[workspace]` table below makes this directory its own workspace root with its
# own `Cargo.lock`, fully isolated from the root graph.
#
# What it does: text --(piper-plus-g2p)--> phoneme ids + prosody + lid -->
# Vokra's native piper-plus TTS (`synthesize_full`) --> WAV. The runtime crates
# it depends on (vokra-models / vokra-piper-plus / vokra-core) stay zero-dep;
# the third-party G2P is confined to this isolated crate and injected across the
# `vokra_piper_plus::Phonemizer` trait boundary.
[package]
name = "vokra-piper-g2p"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
publish = false
description = "Opt-in bridge: real 8-language piper-plus-g2p driving Vokra's native piper-plus TTS (NOT part of the zero-dependency runtime)."

# Own workspace root — isolates this crate (and its non-vokra deps) from the
# Vokra root workspace and gives it a separate Cargo.lock.
[workspace]

[[bin]]
name = "vokra-piper-g2p"
path = "src/main.rs"

[lib]
name = "vokra_piper_g2p"
path = "src/lib.rs"

[dependencies]
# First-party runtime crates, by path (these stay zero-dependency themselves).
vokra-core = { path = "../../crates/vokra-core" }
vokra-models = { path = "../../crates/vokra-models" }
vokra-piper-plus = { path = "../../crates/vokra-piper-plus" }

# The real G2P — the client's own MIT crate, a member of the piper-plus repo's
# `src/rust` workspace. Cargo resolves the subdir package by name. Pinned by rev
# for reproducibility. `naist-jdic` bundles the Japanese dictionary into the
# binary (no runtime download); the default features cover en/zh/ko/es/fr/pt/sv.
piper-plus-g2p = { git = "https://github.com/ayutaz/piper-plus", rev = "41f3696", features = [
    "japanese",
    "naist-jdic",
] }
