# vokra-server — OUT-OF-WORKSPACE integration (opt-in single-binary server).
#
# Same isolation pattern as `integrations/vokra-piper-g2p/`: this crate is
# deliberately NOT a member of the Vokra root workspace. It links an HTTP stack
# (axum / hyper / tokio) + serde + Wyoming TCP listener — none of which are
# `vokra-*` — so it CANNOT live inside the zero-dependency runtime workspace
# (NFR-DS-02, enforced on the ROOT `Cargo.lock` by scripts/check-zero-deps.sh).
# The empty `[workspace]` table below makes this directory its own workspace
# root with its own `Cargo.lock`, fully isolated from the root graph.
#
# Runtime crates it depends on (vokra-core / vokra-models / vokra-piper-plus)
# stay zero-dep; the HTTP / async / serde stack is confined to this crate.
#
# See docs/tickets/m2/M2-09-vokra-server for the full ticket plan.
[package]
name = "vokra-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
publish = false
description = "Vokra single-binary API server: OpenAI/vLLM/piper-plus HTTP + Wyoming TCP (NOT part of the zero-dependency runtime)."

# Own workspace root — isolates this crate (and its non-vokra deps) from the
# Vokra root workspace and gives it a separate Cargo.lock.
[workspace]

[[bin]]
name = "vokra-server"
path = "src/main.rs"

[lib]
name = "vokra_server"
path = "src/lib.rs"

# T18 (NFR-PF-05) TTS 90 ms latency measurement harness.
#
# `harness = false` means no test-runner crate (criterion, libtest) is linked
# — the file has its own `main()` that measures with `std::time::Instant` and
# prints a stable JSON artifact for CI (see benches/tts_latency.rs module doc).
# Keeps the excluded-workspace lockfile lean and honours the ADR spirit of
# small, MIT-only deps.
[[bench]]
name = "tts_latency"
path = "benches/tts_latency.rs"
harness = false

[dependencies]
# --- HTTP / async stack (T02 c04; ADR: axum + hyper 1.x + tokio + tower, all
# MIT). ---
#
# Confined to this crate; root Cargo.lock is unaffected. Wyoming Protocol
# (JSONL over TCP) uses tokio::net::TcpListener directly on the same runtime.
#
# Rationale: axum 0.7 is a hyper-1.x router with first-class support for
# multipart/form-data via `axum::extract::Multipart` (backed by `multer`, MIT,
# pulled transitively by the `multipart` feature) — needed for the OpenAI
# `/v1/audio/transcriptions` audio upload (FR-SV-02). The `ws` feature is
# reserved for future real-time ASR (not on the M2-09 completion path). tokio
# drives both the axum HTTP server and the Wyoming JSONL-over-TCP listener on
# one runtime (T03). tower supplies the `CatchPanic` layer that makes handler
# panics 500 JSON errors (NFR-RL-07, T05). serde + serde_json cover the
# strongly-typed request/response DTOs (OpenAI + Wyoming events).
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "signal",
    "macros",
    "sync",
    "time",
    "io-util",
    "fs",
] }
# hyper 1.x is pinned explicitly. axum 0.7 already depends on it transitively,
# but naming it here documents the ADR choice and makes upgrades a deliberate
# act (Kill-switch F posture on foundational deps).
hyper = { version = "1", features = ["server", "http1", "http2"] }
axum = { version = "0.7", default-features = false, features = [
    "http1",
    "tokio",
    "multipart",
    "ws",
    "matched-path",
    "original-uri",
    "query",
    "json",
] }
tower = { version = "0.5", default-features = false, features = [
    "util",
    "timeout",
    "limit",
] }
# tower-http supplies the `CatchPanicLayer` used by `error::catch_panic_layer`
# (NFR-RL-07). Only the `catch-panic` feature is enabled here at T05 to keep
# the excluded-workspace lockfile small; T20 will add `cors` + `limit` +
# `timeout` + `trace` when the security/operations layer lands.
tower-http = { version = "0.6", default-features = false, features = [
    "catch-panic",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Structured logging surface used by `error.rs` (T05) and the T04 build path.
# `tracing` on its own is a facade; the binary picks a subscriber at T03.
tracing = { version = "0.1", default-features = false, features = ["std"] }

# --- First-party runtime crates (T04 c06 — internal inference service layer). ---
#
# By path (these stay zero-dependency themselves). `vokra-piper-plus` supplies
# the `Phonemizer` trait boundary + `PassthroughPhonemizer` default; the real
# 8-language G2P lives out-of-workspace in `integrations/vokra-piper-g2p` and
# is injected via `InferenceService::with_phonemizer` so this crate never
# depends on jpreprocess / lindera / icu.
vokra-core = { path = "../../crates/vokra-core" }
vokra-models = { path = "../../crates/vokra-models" }
vokra-piper-plus = { path = "../../crates/vokra-piper-plus" }

[dev-dependencies]
# Test-only HTTP client for /health probe. Small, MIT/Apache-2.0.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
