[package]
name = "vokra-parity"
description = "Numerical parity test harness against reference implementations (NFR-QL-01); test-only crate, never published"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# Test-only harness crate: never published.
publish = false

[dependencies]

# M0-04-T18: the parity suites exercise the vokra-ops front-end ops against
# reference fixtures. These are dev-dependencies (used by tests/, not the
# harness lib) and stay within the workspace (no third-party crates).
[dev-dependencies]
vokra-ops.workspace = true
vokra-core.workspace = true

[lints]
workspace = true
